# networking-project

./: .gitignore  Cargo.toml  Dockerfile  readme.md
analysis/: example-run.json  package-lock.json  package.json  tsconfig.json
analysis/src/: consumer-file.ts  file.ts  index.ts  mkbandwidthgraph.ts  producer-file.ts  run.ts  types.ts
common/: Cargo.toml
common/src/: logger.rs
crates/common/src/: logger.rs  time.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: client_state.rs  lib.rs  lrdp_packet.rs  lrdp_socket.rs  srdp_socket.rs
crates/proxy_server/: readme.md
crates/proxy_server/src/: endpoints.rs  server.rs  tcp_server.rs
crates/throughput_recorder/: Cargo.toml  readme.md
crates/traffic_consumer/: Cargo.toml
crates/traffic_consumer/src/: logger.rs  lrdp_consumer.rs  main.rs  srdp_consumer.rs  tcp_consumer.rs  udp_consumer.rs
crates/traffic_producer/: Cargo.toml
proxy_server/: Cargo.toml  readme.md
proxy_server/src/: main.rs  server.rs  tcp_server.rs  udp_server.rs
throughput_recorder/: alpine-build.sh
throughput_recorder/src/: lib.rs  main.rs  snapshot.rs  snapshot_taker.rs
tools/: alpine-build.sh  build-bins.sh  build-image.sh  create-containers.sh  do-run.sh  rm-containers.sh  run-all.sh  run.sh  set-ips.sh
traffic_consumer/: Cargo.toml  readme.md
traffic_consumer/src/: main.rs  tcp_consumer.rs  udp_consumer.rs
traffic_producer/: Cargo.toml  readme.md
traffic_producer/src/: logger.rs  main.rs  payload.rs  producer.rs  tcp_producer.rs  udp_producer.rs
wireshark-dissector/: lrdp.lua
(+9 files in other folders)
