[package]
name = "traffic_consumer"
version = "0.1.0"
authors = ["thomas-crane <thomasgcrane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
throughput_recorder = { path = "../throughput_recorder" }
common = { path = "../common" }
protocol = { path = "../protocol" }
pretty_env_logger = "0.4.0"
